--- a/app/about/About.module.scss
+++ b/app/about/About.module.scss
@@ -37,8 +37,16 @@
             font-size: 1rem;
             margin-bottom: 1.88rem;
         }
+
+        @media screen and (max-width: 750px) {
+            flex-direction: column;
+            .content{
+                margin-top: 500px;
+            }
+        }
     }
 }
+
 
 .experience {
     >div {
