--- a/app/blog/BlogPage.module.scss
+++ b/app/blog/BlogPage.module.scss
@@ -3,7 +3,14 @@
         display: flex;
         justify-content: space-between;
         gap: 1rem;
-        flex-wrap: wrap;
+
+        @media screen and (max-width: 850px) {
+            flex-direction: column;
+            >div{
+                width: 100% !important; 
+
+            }
+        }
 
         .blog {
             width: 60%;
