--- a/app/contact/contact.module.scss
+++ b/app/contact/contact.module.scss
@@ -8,12 +8,12 @@
     display: flex;
     gap: 5rem;
     flex-wrap: wrap;
-    width: min(1200px, 90%);
+    width: min(1200px, 100%);
 
 }
 
 .info{
-    width: 30%;
+    width: min(400px, 100%);
     >*{
         width: 100%;
     }
@@ -23,10 +23,10 @@
 }
 
 .cards{
-    width: calc(70% - 5rem);
     display: flex;
     flex-wrap: wrap;
     flex-grow: 1;
+    gap: 2rem;
     justify-content: space-between;
 
     >*{
@@ -44,10 +44,11 @@
 .form{
     margin: 0;
     form{
-        width: min(1200px, 90%);
+        width: min(1200px, 100%);
         >div{
             margin: 3rem 0;
             display: flex;
+            flex-wrap: wrap;
             gap: 2rem;
             >*{
                 flex: 1;
@@ -71,6 +72,12 @@
             color: #fff;
             background-color: #2b2b2b;
             transition: all 0.3s ease-out;
+        }
+        button:disabled {
+            background-color: #a4a4a4;
+            opacity: 0.7;
+            cursor: not-allowed;
+            pointer-events: none;
         }
         button:hover{
             scale: 1.1;
