--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -20,28 +20,24 @@
     // }
 
     .contentSection {
-      flex: 0 0 60.1555%;
-      width: 60%;
-
-
       >div {
         color: #f7f6f6;
         position: absolute;
         left: -12.3rem;
         z-index: -1;
         line-height: 56%;
-        font-size: 26rem;
+        font-size: 29vw;
         font-weight: 700;
         box-sizing: border-box;
         bottom: 0;
-        transform: translateY(-18%);
+        transform: translate(10vw, -5vw);
+
       }
 
 
       h1 {
-        font-size: 15.816rem;
-        margin-left: -1.3rem;
-
+        font-size: clamp(5rem, 17vw, 17vw);
+        margin-left: -1.3vw;
         span {
           color: #fed9ca;
         }
@@ -51,7 +47,7 @@
         font-family: "Lora", serif;
         color: #747474;
         font-size: 1.313rem;
-        max-width: 75%;
+        max-width: 700px;
       }
     }
 
