--- a/app/project/[projectId]/Project.module.scss
+++ b/app/project/[projectId]/Project.module.scss
@@ -10,6 +10,11 @@
         display: flex;
         gap: 1rem;
 
+        @media screen and (max-width: 1200px) {
+            flex-direction: column;
+        }
+
+
         img{
             max-width: 100%;
             height: auto;
