--- a/components/NavBar/NavBar.module.scss
+++ b/components/NavBar/NavBar.module.scss
@@ -1,4 +1,7 @@
 .footerSection{
+    >*{
+        border: 1px solid green Im !important;
+    }
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,7 +32,7 @@
         list-style: none;
         li{
             transition: all 0.3s ease-in-out;
-            margin-bottom: 2.31rem;
+            margin-bottom: 1.5rem;
             font-weight: 500;
             text-wrap: nowrap;
             transform: translateX(100%);
@@ -62,11 +65,13 @@
 .visible{
     transform: translateY(0);
     opacity: 1;
+    pointer-events: all;
 }
 .hidden {
     transform: translateY(-100%);
     opacity: 0;
     user-select: none;
+    pointer-events: none;
 }
 
 @keyframes navAnimation {
