--- a/app/about/About.module.scss
+++ b/app/about/About.module.scss
@@ -1,6 +1,9 @@
 .container {
     section {
         padding: 5rem 0;
+        @media screen and (max-width: 750px) {
+            padding-bottom: 0;
+        }
     }
 }
 
@@ -42,6 +45,7 @@
             flex-direction: column;
             .content{
                 margin-top: 500px;
+                margin-bottom: 0;
             }
         }
     }
