--- a/app/globals.css
+++ b/app/globals.css
@@ -93,7 +93,8 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: black;
+  background-color: white;
   /* background: linear-gradient(
       to bottom,
       transparent,
