--- a/app/blog.scss
+++ b/app/blog.scss
@@ -1,7 +1,6 @@
 @import "quill/dist/quill.core.css";
 @import "quill/dist/quill.snow.css";
 
-/* Global Editor Styling */
 .ql-editor {
     all: unset;
     font-family: "Arial", sans-serif; 
@@ -11,15 +10,14 @@
     padding: 24px;
 }
 
-/* Headings */
 .ql-editor h1 {
-  font-size: 2.2em;  /* Reduced for balance */
+  font-size: 2.2em;  
   margin: 0 0 30px !important;
   line-height: 1.3;
 }
 
 .ql-editor h2 {
-  font-size: 1.9em;  /* Slightly smaller */
+  font-size: 1.9em; 
   margin: 50px 0 10px  !important;
   line-height: 1.4;
 }
@@ -42,12 +40,13 @@
 
 /* Paragraph and Text */
 .ql-editor p {
-  margin: 0 0 24px  !important;
+  margin: 0 0 10px !important;
 }
 
 /* Lists */
 .ql-editor ul, .ql-editor ol {
   margin: 0 0 24px 35px  !important;
+  margin-bottom: 0 !important;
 }
 
 .ql-editor li {
@@ -70,6 +69,11 @@
   border-radius: 6px;
   margin: 32px 0  !important;
   overflow-x: auto;
+}
+
+.ql-editor ol {
+  list-style-position: outside;
+  margin-left: -8px !important;
 }
 
 /* Links */
